# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  setup.cfg
pre_commit_scripts/: check_commit_scope.py  check_commiter_domain.py  prepare_commit_msg.py  pretty_format_java.py
pre_commit_scripts/common/: commit_scope_builder_module.py
pre_commit_scripts/language_formatters_pre_commit_hooks/: pre_conditions.py  utils.py
